# scar

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  requirements.txt  scAR-cpu.yml  scAR-gpu.yml  scAR.yml  scar-cpu.yml  scar-gpu.yml  scar.readthedocs.yaml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: black.yaml  black.yml  pylint.yml  python-conda-build.yaml  python-publish.yml  semantic-release.yaml
datasets/: 20k_hgmm_cell_annotation.csv
docs/: API.rst  Contacts.rst  Installation.ipynb  Installation.rst  Introduction.rst  License.rst  README.md  README.rst  Reference.rst  Release notes.rst  Release_notes.md  Tutorials.ipynb  Tutorials.rst  conf.py  index.rst  requirements.txt  scAR_tutorial_denoising_CITEseq.ipynb  scAR_tutorial_identity_barcode.ipynb  scAR_tutorial_mRNA_denoising.ipynb  scAR_tutorial_sgRNA_assignment.ipynb
docs/_static/: scar-styles.css
docs/_templates/: layout.html
docs/tutorials/: README.rst  Tutorials.ipynb  index.rst  scAR_tutorial_ambient_profile.ipynb  scAR_tutorial_batch_denoising_scRNAseq.ipynb  scAR_tutorial_denoising_CITEseq.ipynb  scAR_tutorial_denoising_scATACseq.ipynb  scAR_tutorial_denoising_scRNAseq.ipynb  scAR_tutorial_identity_barcode.ipynb  scAR_tutorial_mRNA_denoising.ipynb  scAR_tutorial_sgRNA_assignment.ipynb  synthetic_assignment.ipynb
docs/usages/: API.rst  Command_Line_Interface.rst  index.rst  processing.rst  synthetic_dataset.rst  training.rst
reproducibility/: Fig1.noise_level.ipynb  Fig2.cropseq_val.ipynb  Fig3.CITEseq_5k_PBMCs.ipynb  Fig4.scRNAseq_20k_hgmm.ipynb  Fig5.benchmarking.ipynb  Fig6.batch_correction.ipynb
scAR/: __init__.py  __main__.py  _activation_functions.py  _data_generater.py  _data_loader.py  _helper_functions.py  _hyperparams_optimization.py  _loss_functions.py  _scAR.py  _vae.py  activation_functions.py  data_loader.py  hyperparams_optimization.py  scAR.py  vae.py
scAR/integration_tests/: scar_integration_test.py
scAR/main/: __init__.py  __main__.py  _activation_functions.py  _data_generater.py  _hyperparams_optimization.py  _loss_functions.py  _scAR.py  _vae.py
scAR/test/: test_activation_functions.py  test_scAR.ipynb  test_scar.py  test_scar_integration.py
scar/: __init__.py
scar/main/: __init__.py  __main__.py  __version__.py  _activation_functions.py  _data_generater.py  _loss_functions.py  _scar.py  _setup.py  _utils.py  _vae.py
scar/test/: ambient_profile.pickle  citeseq_ambient_profile.pickle  citeseq_native_counts.pickle  citeseq_raw_counts.pickle  output_assignment.pickle  raw_counts.pickle  test_activation_functions.py  test_scAR.ipynb  test_scar.py
